Front end numerous improvements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,10 +99,10 @@
   	</div>
     
 
- 	<div class="span8" style = "border: 1px solid black">
+ 	<div class="span8" style = "border: 1px solid gray">
       <!--Body content-->
         <p style= "font-family: 'Swanky and Moo Moo', cursive; font-size = 40px">
-      		Other Popular Bets
+      		Register Now
       		</p>
 
      <!--Moving Banner DIV-->  
@@ -136,12 +136,14 @@
   		</div></div>
   		</div>
   	      </div>
-		<div class="row-fluid"><div class="span12" style = "height: 10px"></div></div>
+		<div class="row-fluid"><div class="span12" style = "height: 10px"><p style= "font-family: 'Swanky and Moo Moo', cursive; font-size = 40px">
+      		Other Popular Bets
+      		</p></div></div>
 		<div class="row-fluid">
- 			<div class="span3" style = "border: 1px solid black; height: 250px"><div id="vote-area"></div></div>
-  			<div class="span3" style = "border: 1px solid black; height: 250px"><div id="vote-area"></div></div>
-  			<div class="span3" style = "border: 1px solid black; height: 250px"><div id="vote-area"></div></div>
-  			<div class="span3" style = "border: 1px solid black; height: 250px"><div id="vote-area"></div></div>
+ 			<div class="span3" style = "border: 1px solid gray; height: 250px; background: url('img/mj.jpg')"><div class = "row-fluid"><div class="span12" style = "background-color:#ffffff; background: linear-gradient(white, gray); border: 1px solid gray; height: 25px;  opacity:0.9;"><font size=1><b>Will Marijuana Be Legalized in CA in 2014?</b></font></div></div></div>
+  			<div class="span3" style = "border: 1px solid gray; height: 250px; background: url('img/barack.jpeg')"><div class = "row-fluid"><div class="span12" style = "background-color:#ffffff; background: linear-gradient(white, gray); border: 1px solid gray; height: 25px;  opacity:0.9;"><font size=1><b>Will Barack Obama Ease Immigration Laws?</b></font></div></div></div>
+  			<div class="span3" style = "border: 1px solid gray; height: 250px; background: url('img/lohan.jpeg')"><div class = "row-fluid"><div class="span12" style = "background-color:#ffffff; background: linear-gradient(white, gray); border: 1px solid gray; height: 25px;  opacity:0.9;"><font size=1><b>Will Lindsey Lohan's New Series Be a Hit?</b></font></div></div></div>
+  			<div class="span3" style = "border: 1px solid gray; height: 250px; background: url('img/usc.jpg')"><div class = "row-fluid"><div class="span12" style = "background-color:#ffffff; background: linear-gradient(white, gray); border: 1px solid gray; height: 25px;  opacity:0.9;"><font size=1><b>Will We Finish Our HackSC App?</b></font></div></div></div>
   		</div>
 	</div>
 
